crates/parser/src/tests/snapshots/binop_basic.snap
---
source: crates/parser/src/tests.rs
assertion_line: 47
expression: "(test[1], ast, ast_string)"
---
- 20 - 19
- Ok:
    nodes:
      - Expr:
          BinOp:
            op: Sub
            lhs:
              Expr:
                Lit:
                  value:
                    UInt64: 20
            rhs:
              Expr:
                Lit:
                  value:
                    UInt64: 19
- (- 20 19)

