crates/parser/src/tests/snapshots/binop_empty_paren.snap
---
source: crates/parser/src/tests.rs
assertion_line: 16
expression: "(input, ast, ast_string)"
---
- ()
- Err:
    message: Expecting primary expression. Got CloseParen
    line: 1
    column: 2
- "Parsing error: Expecting primary expression. Got CloseParen at 1:2"

