crates/parser/src/tests/snapshots/binop_single.snap
---
source: crates/parser/src/tests.rs
assertion_line: 47
expression: "(test[1], ast, ast_string)"
---
- "19"
- Ok:
    nodes:
      - node:
          Lit:
            value:
              UInt64: 19
- "19"

