crates/parser/src/tests/snapshots/block_bad.snap
---
source: crates/parser/src/tests.rs
assertion_line: 60
expression: "(test[1], ast, ast_string)"
---
- "if foo {"
- Err:
    message: "Expecting `}` to terminate block"
    line: 0
    column: 0
- "Expecting `}` to terminate block"

