crates/parser/src/tests/snapshots/block_missing.snap
---
source: crates/parser/src/tests.rs
assertion_line: 59
expression: "(test[1], ast, ast_string)"
---
- if foo
- Err:
    message: "Expecting `{` to start block. Got `EOF`"
    line: 0
    column: 0
- "Parsing error: Expecting `{` to start block. Got `EOF`"

