crates/parser/src/tests/snapshots/call_bad_2.snap
---
source: crates/parser/src/tests.rs
assertion_line: 74
expression: "(test[1], ast, ast_string)"
---
- a(a
- Err:
    message: "Expecting `,` or `CloseParen` in function call argument list. Got `identifier: a`"
    line: 1
    column: 3
- "Parsing error: Expecting `,` or `CloseParen` in function call argument list. Got `identifier: a` at 1:3"

