crates/parser/src/tests/snapshots/call_bad_3.snap
---
source: crates/parser/src/tests.rs
assertion_line: 16
expression: "(input, ast, ast_string)"
---
- "a(a,"
- Err:
    message: "Expecting ')' in function call. Got EOF"
    line: 0
    column: 0
- "Parsing error: Expecting ')' in function call. Got EOF"

